Closed Bug 595650 Opened 15 years ago Closed 15 years ago

fix border-radius computed style code to reflect new meaning of vertical % values

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Keywords: css3)

Attachments

(1 file)

In bug 471643 we changed the meaning of percents on border-radius but didn't change the computed style code to match. We need to make the appropriate changes to nsComputedDOMStyle::GetEllipseRadii.
blocking2.0: --- → betaN+
I'll just fix this in bug 595651, since most of the code I'd write for this would go away there if I fixed them separately.
Actually, that's not true, because of outline-radius.
Attached patch patchSplinter Review
Attachment #477993 - Flags: review?(bzbarsky)
Whiteboard: [needs review]
Attachment #477993 - Flags: review?(bzbarsky) → review+
Whiteboard: [needs review] → [waiting to land until after 4.0b7 freeze]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [waiting to land until after 4.0b7 freeze]
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: