Fix border-radius computed style code to reflect that percentage Y values are percentages of the box height.  (Bug 595650)  r=bzbarsky  a2.0=blocking2.0:betaN